fix: missing linebreaks in ability text

--- a/data/templates/card.css
+++ b/data/templates/card.css
@@ -12,7 +12,7 @@
     justify-content: left;
     align-items: start;
 
-    font-size: 0.6em;
+    font-size: 0.8em;
 
 
     padding: 5mm;
